--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body {
+    font-family: 'Bangers', cursive, Arial, Helvetica, sans-serif;
     height: 95vh;
     width: 95;
     display: flex;
@@ -6,4 +7,10 @@ body {
     align-items: center;
     flex-direction: column;
     color: green;
+    text-shadow: 0 0 3px darkolivegreen;
+}
+
+canvas {
+    border: 3px solid darkgreen;
+    box-shadow: 0 0 3px darkolivegreen;
 }
